bebytes/tests/compile_time/size_expressions/nonexistent_field.stderr
error: Field 'nonexistent' not found in struct
  --> tests/compile_time/size_expressions/nonexistent_field.rs:12:22
   |
12 |     #[bebytes(size = "nonexistent")]
   |                      ^^^^^^^^^^^^^